# service_planet

./: Cargo.toml  Dockerfile  README.md  makefile
.github/: dependabot.yml
event_manager/: Cargo.toml  README.md
event_manager/src/: aggregate.rs  cloudevents.rs  events.rs  lib.rs
planet_interface/: Cargo.toml
planet_interface/src/: lib.rs
src/: aggregate.rs  commands.rs  events.rs  main.rs
