[package]
name = "service_planet"
version = "0.1.0"
authors = ["aedius"]
edition = "2018"

[workspace]
members = ["planet_interface"]

[dependencies]
planet_interface = { path = "planet_interface", version = "0.1.0"}
eventsourcing-derive = "0.1.3"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"

[dependencies.eventsourcing]
version = "0.1.5"
features = [ "eventstore" ]