[package]
name = "service_planet"
version = "0.1.0"
authors = ["aedius"]
edition = "2018"

[workspace]
members = ["planet_interface", "event_manager"]

[dependencies]
planet_interface = { path = "planet_interface", version = "0.1.0"}
event_manager = { path = "event_manager", version = "0.1.0", features = ["eventstore-rs"]}
eventstore = "0.7.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3"
uuid = { version  = "0.8", features = [ "v4", "serde" ] }
tokio = { version = "0.2", features = ["full"] } # TODO remove full