[package]
name = "event_manager"
version = "0.1.0"
authors = ["Aedius <aedius.filmania@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version  = "0.8", features = [ "v4", "serde" ] }
chrono = { version = "0.4", features = ["serde"] }