[package]
name = "event_manager"
version = "0.1.0"
authors = ["Aedius <aedius.filmania@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
eventstore-rs = ["eventstore", "futures", "tokio"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version  = "0.8", features = [ "v4", "serde" ] }

eventstore = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "0.2", features = ["stream"],optional = true }